# authentik

./: .clippy.toml  .envrc  .rustfmt.toml  Cargo.toml  flake.nix  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci-main.yml
authentik/lib/kerberos/: protocol.py
authentik/lib/kerberos/crypto/: __init__.py  aes128_cts_hmac_sha1_96.py  base.py  des3_cbc_hmac_sha1_kd.py  nfold.py
authentik/lib/kerberos/crypto/tests/: des3_cbc_hmac_sha1_kd.py  nfold.py  test_aes128_cts_hmac_sha1_96.py
authentik/lib/kerberos/kdc/: exceptions.py  kdc.py
authentik/sources/spnego/: apps.py  models.py  urls.py  views.py
authentik/sources/spnego/api/: source.py
crates/authentik-server/: Cargo.toml
crates/authentik-server/src/: backend.rs  main.rs  metrics.rs
crates/authentik-server/src/web/: assets.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: settings.rs
crates/core/: Cargo.toml
crates/core/src/: models.rs
crates/orm-macros/: Cargo.toml
crates/orm-macros/src/: lib.rs
crates/orm-utils/: Cargo.toml
crates/orm-utils/src/: expiring_model.rs  lib.rs
crates/providers-oauth2/: Cargo.toml
crates/providers-oauth2/src/: id_token.rs  lib.rs  models.rs  utils.rs  views.rs
crates/server/: Cargo.toml
crates/server-utils/: Cargo.toml
crates/server-utils/src/: backend.rs  db.rs  errors.rs  state.rs
crates/server/src/: backend.rs  crypto.rs  main.rs  metrics.rs
crates/server/src/web/: assets.rs  backend.rs  mod.rs
lifecycle/: ak
scripts/: docker-compose.yml  generate_config.py
src/: backend.rs  main.rs  metrics.rs  utils.rs
src/common/: mod.rs  settings.rs
src/orm/utils/: mod.rs
src/providers/: mod.rs
src/providers/oauth2/: constants.rs  id_token.rs  mod.rs  models.rs  utils.rs  views.rs
src/server/utils/: mod.rs  state.rs
src/web/: assets.rs  backend.rs  mod.rs
