[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
authentik-common = { path = "../authentik-common" }
axum = { version = "0.7.7", features = ["http2", "ws", "macros"] }
axum-server = { version = "0.7.1", features = ["tls-openssl"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
derivative = "2.2.0"
either = "1.13.0"
futures = "0.3.31"
glob = "0.3.1"
http = "1.1.0"
http-auth-basic = "0.3.5"
hyper = "1.4.1"
hyper-util = "0.1.9"
hyperlocal = "0.9.1"
ipnet = { version = "2.10.0", features = ["serde"] }
nix = { version = "0.29.0", features = ["signal"] }
openssl = "0.10.66"
openssl-sys = "0.9.103"
prometheus = { version = "0.13.4", features = ["process"] }
pyo3 = { version = "0.22.3", features = ["auto-initialize"] }
regex = "1.11.0"
sea-orm = { version = "1.0.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "macros",
] }
sentry = { version = "0.34.0", features = ["anyhow", "tower", "tracing"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
tempfile = "3.13.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.1", features = ["fs", "redirect", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "json",
    "fmt",
    "registry",
    "time",
] }
url = "2.5.2"

# Default release profile, select with `--release`
[profile.release]
lto = true

# Default development profile; default for most Cargo commands, otherwise
# selected with `--debug`
[profile.dev]
# Saves a lot of disk space. If symbols are needed, use the dbg profile.
debug = 0

[profile.dev.package]
sha2 = { opt-level = 2 }

# Custom profile with full debugging info, use `--profile dbg` to select
[profile.dbg]
inherits = "dev"
debug = 2
