[package]
name = "authentik-common"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
config = { workspace = true }
serde = { workspace = true }
ipnet = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
