[package]
name = "authentik-providers-oauth2"
version = "2024.8.3"
edition = "2021"
rust-version.workspace = true

[dependencies]
authentik-common = { path = "../common" }
authentik-core = { path = "../core" }
authentik-orm-utils = { path = "../orm-utils" }
authentik-orm-macros = { path = "../orm-macros" }
authentik-server-utils = { path = "../server-utils" }

anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
either = { workspace = true }
http = { workspace = true }
http-auth-basic = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
