[package]
name = "authentik-server-utils"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
