[package]
name = "authentik-server"
version = "2024.8.3"
edition = "2021"
rust-version.workspace = true

[dependencies]
authentik-common = { path = "../common" }
authentik-providers-oauth2 = { path = "../providers-oauth2" }

anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
nix = { workspace = true }
openssl = { workspace = true }
prometheus = { workspace = true }
sea-orm = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
